--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -8,24 +8,11 @@
   </div>
 
   <ul class="products">
-    <li class="product-item">
-      <div class="product" *ngFor="let product of getFilteredProducts()">
-        <div class="product-details">
-          <img [src]= "getImageURL(product)" [alt]="product.name" />
-          <div class="product-info">
-            <div class="name">{{product?.name}}</div>
-            <div class="description">{{product?.description}}</div>
-            <div class="category">Part Type: {{product?.category}}</div>
-          </div>
-        </div>
-        <div class="price">
-          <div *ngIf="product.discount === 0">{{product?.price | currency: 'EUR' }}</div>
-          <div *ngIf="product.discount > 0" class="discount" >
-            {{(product.price * (1-product.discount)) | currency: 'EUR'}}
-          </div>
-          <button class="cta">Buy</button>
-        </div>
-      </div>
+    <li class="product-item"  *ngFor="let product of getFilteredProducts()">
+        <app-product-details 
+            [product]="product" 
+            (buy)="addToCart(product)">
+        </app-product-details>
     </li>
   </ul>
 </div>
