--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <bot-site-header></bot-site-header>
 <!-- <app-home></app-home> -->
- <app-catalog></app-catalog>
+ <!-- <app-catalog></app-catalog> -->
+<bot-cart></bot-cart>
