--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
 <bot-site-header></bot-site-header>
-<!-- <app-home></app-home> -->
- <!-- <app-catalog></app-catalog> -->
-<bot-cart></bot-cart>
+<router-outlet></router-outlet>
