--- a/src/app/site-header/site-header.component.html
+++ b/src/app/site-header/site-header.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="left">
-    <img class="logo" src="/assets/images/logo.png" alt="Logo" />
+    <img class="logo" src="/assets/images/logo-3.png" alt="Logo" />
     <a routerLink="/home" routerLinkActive="active">Home</a>
     <a routerLink="/catalog" routerLinkActive="active">Catalog</a>
     <div class="cart">
